a little bit of editing

--- a/views/Docter/profile.ejs
+++ b/views/Docter/profile.ejs
@@ -22,10 +22,6 @@
                                     <h3 class="counter"><%= docter.patientsOnTreatment %></h3>
                                     <span>Children on vaccination </span>
                                   </li>
-                                  <li class="text-center">
-                                    <h3><%= docter.appointmentFee %></h3>
-                                    <span>Appointment Fee</span>
-                                  </li>
                               </ul>
                            </div>
                         </div>
@@ -236,7 +232,7 @@
                                           <div class="form-group col-sm-4">
                                              <label>Position:</label>
                                              <select class="form-control" required name="position" id="exampleFormControlSelect4">
-                                                <option selected="">Senior Docter</option>
+                                                <option selected="">Senior Doctor</option>
                                                 <option>Patient Services Assistant</option>
                                                 <option>Surgeon</option>
                                                 <option>Nurse</option>
