The system is feeling better to use

--- a/views/Docter/partials/header.ejs
+++ b/views/Docter/partials/header.ejs
@@ -13,7 +13,7 @@
             <div class="iq-sidebar-logo d-flex justify-content-between">
                <a href="/indexDocter">
                <img src="assets/images/logo/favicon.png" class="img-fluid" alt="">
-               <span>VaccineHealth</span>
+               <span>Baby Healthcare and Wellbeing Tracker</span>
                </a>
                <div class="iq-menu-bt-sidebar">
                      <div class="iq-menu-bt align-self-center">
@@ -52,7 +52,7 @@
                   <div class="top-logo">
                      <a href="/indexDocter" class="logo">
                      <img src="assets/images/logo/favicon.png" class="img-fluid" alt="">
-                     <span>VaccineHealth</span>
+                     <span>Baby Healthcare and Wellbeing Tracker</span>
                      </a>
                   </div>
                </div>
