--- a/views/Docter/signup.ejs
+++ b/views/Docter/signup.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/sign/header') %>
             <div class="col-md-6 position-relative">
                 <div class="sign-in-from">
-                    <h1 class="mb-0">Docter Sign Up</h1>
+                    <h1 class="mb-0">Doctor Sign Up</h1>
                     <form class="mt-4" method="POST" action="/signupDocter">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Your Full Name</label>
