--- a/views/Parent/childInfoParent.ejs
+++ b/views/Parent/childInfoParent.ejs
@@ -105,7 +105,7 @@
                                <div class="col-sm-12">
                               <div class="iq-card">
                                  <div class="iq-card-header d-flex justify-content-between">
-                                    <h4 class="card-title">Docter</h4>
+                                    <h4 class="card-title">Doctor</h4>
                                     <a class="btn btn-dark" href="viewDoctersBy-<%=child._id%>" style="color: white;">View Docters</a>
                                  </div>
                               </div>
@@ -126,6 +126,7 @@
                </div>
                <div class="iq-card-body">
                   <div class="table-responsive mt-4">
+                     <!-- Vaccination Information Table -->
                      <table class="table mb-0 table-borderless">
                         <thead>
                            <tr>
@@ -156,6 +157,7 @@
                            <% } ) %>
                         </tbody>
                      </table>
+                     <!-- End of Vaccination Information Table -->
                   </div>
                </div>
             </div>
