--- a/views/Parent/editProfile.ejs
+++ b/views/Parent/editProfile.ejs
@@ -63,21 +63,17 @@
                                           <div class="form-group col-sm-6">
                                              <label>Country:</label>
                                              <select  class="form-control" required name="country" id="exampleFormControlSelect3">
-                                                <option>Canada</option>
-                                                <option>AMERICA</option>
-                                                <option selected="">INDIA</option>
-                                                <option>USA</option>
-                                                <option>Africa</option>
+                                                <option>KENYA</option>
                                              </select>
                                           </div>
                                           <div class="form-group col-sm-6">
                                              <label>State:</label>
                                              <select class="form-control" required name="state" id="exampleFormControlSelect4">
-                                                <option>Delhi</option>
-                                                <option>Jind</option>
-                                                <option selected="">MAHARASHTRA</option>
-                                                <option>London</option>
-                                                <option>Kolkata</option>
+                                                <option>MERU</option>
+                                                <option>NAKURU</option>
+                                                <option selected="">NAIROBI</option>
+                                                <option>MOMBASA</option>
+                                                <option>KISUMU</option>
                                              </select>
                                           </div>
                                           <div class="form-group col-sm-12">
@@ -134,10 +130,7 @@
                                           <div class="col-md-12">
                                              <div class="profile-img-edit">
                                                 <img class="profile-pic" src="<%=parent.image%>" alt="profile-pic">
-                                                <!-- <div class="p-image"> -->
-                                                   <!-- <i class="ri-pencil-line upload-button"></i> -->
                                                    <input style="margin-top : 20px" id="cover" name="image" type="file" accept="image/*" required/>
-                                                <!-- </div> -->
                                              </div>
                                           </div>
                                        </div>
