--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,16 +42,16 @@
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
                         <li class="menu-active"><a href="/">Home</a></li>
-                        <li><a href="doctors.html">Docters</a></li>
+                        <li><a href="doctors.html">Doctors</a></li>
                         <li class="menu-has-children"><a href="">Signup </a>
                             <ul>
-                                <li><a href="/signupDocter">Docter</a></li>
+                                <li><a href="/signupDocter">Doctor</a></li>
                                 <li><a href="/signupParent">Parent</a></li>
                             </ul>
                         </li>
                         <li class="menu-has-children"><a href="">Signin</a>
                             <ul>
-                                <li><a href="/signinDocter">Docter</a></li>
+                                <li><a href="/signinDocter">Doctor</a></li>
                                 <li><a href="/signinParent">Parent</a></li>
                             </ul>
                         </li>		          				          
