--- a/views/Docter/editProfile.ejs
+++ b/views/Docter/editProfile.ejs
@@ -67,21 +67,17 @@
                                           <div class="form-group col-sm-6">
                                              <label>Country:</label>
                                              <select  class="form-control" required name="country" id="exampleFormControlSelect3">
-                                                <option>Canada</option>
-                                                <option>AMERICA</option>
-                                                <option selected="">INDIA</option>
-                                                <option>USA</option>
-                                                <option>Africa</option>
+                                                <option>KENYA</option>
                                              </select>
                                           </div>
                                           <div class="form-group col-sm-6">
                                              <label>State:</label>
                                              <select class="form-control" required name="state" id="exampleFormControlSelect4">
-                                                <option>Delhi</option>
-                                                <option>Jind</option>
-                                                <option selected="">MAHARASHTRA</option>
-                                                <option>London</option>
-                                                <option>Kolkata</option>
+                                                <option>MERU</option>
+                                                <option>NAKURU</option>
+                                                <option selected="">NAIROBI</option>
+                                                <option>MOMBASA</option>
+                                                <option>KISUMU</option>
                                              </select>
                                           </div>
                                           <div class="form-group col-sm-6">
