--- a/views/Docter/signin.ejs
+++ b/views/Docter/signin.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/sign/header') %>
             <div class="col-md-6 position-relative">
                 <div class="sign-in-from">
-                    <h1 class="mb-0">Docter Sign in</h1>
+                    <h1 class="mb-0">Doctor Sign in</h1>
                     <p>Enter your username and password to access admin panel.</p>
                     <form class="mt-4" method="POST" action="/signinDocter" >
                         <div class="form-group">
