changing a few contradictory names

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Page Title -->
-    <title>VaccineHealth</title>
+    <title>BabyHealthWellbeingTracker</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images/logo/favicon.png" type="image/x-icon">
@@ -36,7 +36,7 @@
                 <div class="row align-items-center justify-content-between d-flex">
                 <div id="logo">
                     <a href="/" style="color:black;font-size : 1.3em;font-family : cursive;text-decoration : underline">
-                        VaccineHealth 
+                        BabyHealthWellbeingTracker 
                     </a>
                 </div>
                 <nav id="nav-menu-container">
