whatsapp community forum

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -54,7 +54,8 @@
                                 <li><a href="/signinDocter">Doctor</a></li>
                                 <li><a href="/signinParent">Parent</a></li>
                             </ul>
-                        </li>		          				          
+                        </li>
+                        <li><a href="https://chat.whatsapp.com/EyYn32smGLv9j9Q1C7sYmN" target="_blank">Community Forum</a></li>
                     </ul>
                 </nav><!-- #nav-menu-container -->		    		
                 </div>
