just edited a few little things

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,7 +42,8 @@
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
                         <li class="menu-active"><a href="/">Home</a></li>
-                        <li><a href="doctors.html">Doctors</a></li>
+                        <!--<li><a href="doctors.html">Doctors</a></li>-->
+                        <li><a href="#">Blog Page</a></li>
                         <li class="menu-has-children"><a href="">Signup </a>
                             <ul>
                                 <li><a href="/signupDocter">Doctor</a></li>
@@ -69,9 +70,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5">
-                    <h4>Caring for better life</h4>
-                    <h1>Leading the way in medical excellence</h1>
-                    <a href="/signinParent" class="template-btn mt-3">take appointment</a>
+                    <h4>Taking care of our children</h4>
+                    <h1>Leading the way in infant vaccinations</h1>
+                    <a href="/signinParent" class="template-btn mt-3">Sign-In Parents</a>
                 </div>
             </div>
         </div>
